--- a/openvidu-server/docker/openvidu-proxy/default_nginx_conf/ce/default-app-without-demos.conf
+++ b/openvidu-server/docker/openvidu-proxy/default_nginx_conf/ce/default-app-without-demos.conf
@@ -8,7 +8,7 @@ upstream openviduserver {
 }
 
 server {
-    listen 443 ssl;
+    listen {https_port} ssl;
     server_name {domain_name};
 
     ssl_certificate         /etc/letsencrypt/live/{domain_name}/fullchain.pem;
@@ -60,7 +60,7 @@ server {
         proxy_pass http://openviduserver;
     }
 
-    location /openvidu {
+    location ~ /openvidu$ {
         proxy_pass http://openviduserver;
     }
 
