--- a/openvidu-server/docker/openvidu-proxy/default_nginx_conf/pro/default.conf
+++ b/openvidu-server/docker/openvidu-proxy/default_nginx_conf/pro/default.conf
@@ -18,10 +18,10 @@ upstream openviduserver {
 server {
     # Redirect to https
     if ($host = {domain_name}) {
-        return 301 https://$host$request_uri;
+        rewrite ^(.*) https://{domain_name}:{https_port}$1 permanent;
     } # managed by Certbot
 
-    listen 80 default_server;
+    listen {http_port} default_server;
     server_name {domain_name};
 
     # letsencrypt
@@ -44,7 +44,7 @@ server {
 }
 
 server {
-    listen 443 ssl default deferred;
+    listen {https_port} ssl default deferred;
     server_name {domain_name};
 
     ssl_certificate         /etc/letsencrypt/live/{domain_name}/fullchain.pem;
@@ -105,7 +105,7 @@ server {
         proxy_pass http://openviduserver;
     }
 
-    location /openvidu {
+    location ~ /openvidu$ {
         proxy_pass http://openviduserver;
     }
 
