--- a/openvidu-server/docker/openvidu-docker-compose/.env
+++ b/openvidu-server/docker/openvidu-docker-compose/.env
@@ -26,6 +26,15 @@ CERTIFICATE_TYPE=selfsigned
 # If CERTIFICATE_TYPE=letsencrypt, you need to configure a valid email for notifications
 LETSENCRYPT_EMAIL=user@example.com
 
+# Proxy configuration
+# If you want to change the ports on which openvidu listens, uncomment the following lines
+
+# Used for http connections and necessary to obtain letsencrypt certificated
+# PROXY_HTTP_PORT=80
+
+# Used for Openvidu API and the application deployed using docker
+# PROXY_HTTPS_PORT=443
+
 # Whether to enable recording module or not
 OPENVIDU_RECORDING=false
 
