--- a/openvidu-server/docker/openvidu-proxy/default_nginx_conf/ce/default.conf
+++ b/openvidu-server/docker/openvidu-proxy/default_nginx_conf/ce/default.conf
@@ -1,10 +1,10 @@
 server {
-    listen 80;
+    listen {http_port};
     server_name {domain_name};
     
     # Redirect to https
     location / {
-        return 301 https://$host$request_uri;
+        rewrite ^(.*) https://{domain_name}:{https_port}$1 permanent;
     }    
 
     # letsencrypt
