--- a/openvidu-server/docker/openvidu-docker-compose/docker-compose.yml
+++ b/openvidu-server/docker/openvidu-docker-compose/docker-compose.yml
@@ -78,7 +78,7 @@ services:
             - DOMAIN_OR_PUBLIC_IP=${OPENVIDU_DOMAIN_OR_PUBLIC_IP}
             - CERTIFICATE_TYPE=${CERTIFICATE_TYPE}
             - LETSENCRYPT_EMAIL=${LETSENCRYPT_EMAIL}
-            - PROXY_HTTP_PORT=${PROXY_HTTP_PORT:-}
-            - PROXY_HTTPS_PORT=${PROXY_HTTPS_PORT:-}
+            - PROXY_HTTP_PORT=${OPENVIDU_HTTP_PORT:-}
+            - PROXY_HTTPS_PORT=${OPENVIDU_HTTPS_PORT:-}
             - PROXY_MODE=CE
             - WITH_DEMOS=true
