--- a/openvidu-server/docker/openvidu-docker-compose/.env
+++ b/openvidu-server/docker/openvidu-docker-compose/.env
@@ -30,14 +30,14 @@ LETSENCRYPT_EMAIL=user@example.com
 # If you want to change the ports on which openvidu listens, uncomment the following lines
 
 # Allows any request to http://IP:OPENVIDU_HTTP_PORT/ to be automatically 
-# redirected to https://IP:OPENVIDU_HTTPS_PORT/ . 
+# redirected to https://IP:OPENVIDU_HTTPS_PORT/. 
 # WARNING: the default port 80 cannot be changed during the first boot 
 # if you have chosen to deploy with the option CERTIFICATE_TYPE=letsencrypt
-# OPENVIDU_HTTP_PORT=80
+# HTTP_PORT=80
 
 # Changes the port of all services exposed by OpenVidu. 
 # SDKs, REST clients and browsers will have to connect to this port
-# OPENVIDU_HTTPS_PORT=443
+# HTTPS_PORT=443
 
 # Whether to enable recording module or not
 OPENVIDU_RECORDING=false
