allowed access proxy added

--- a/openvidu-server/docker/openvidu-docker-compose/docker-compose.yml
+++ b/openvidu-server/docker/openvidu-docker-compose/docker-compose.yml
@@ -80,5 +80,7 @@ services:
             - LETSENCRYPT_EMAIL=${LETSENCRYPT_EMAIL}
             - PROXY_HTTP_PORT=${HTTP_PORT:-}
             - PROXY_HTTPS_PORT=${HTTPS_PORT:-}
+            - ALLOWED_ACCESS_TO_DASHBOARD=${ALLOWED_ACCESS_TO_DASHBOARD:-}
+            - ALLOWED_ACCESS_TO_RESTAPI=${ALLOWED_ACCESS_TO_RESTAPI:-}
             - PROXY_MODE=CE
             - WITH_DEMOS=true
