--- a/openvidu-server/docker/openvidu-docker-compose/.env
+++ b/openvidu-server/docker/openvidu-docker-compose/.env
@@ -39,6 +39,26 @@ LETSENCRYPT_EMAIL=user@example.com
 # SDKs, REST clients and browsers will have to connect to this port
 # HTTPS_PORT=443
 
+# Access restrictions
+# In this section you will be able to restrict the ips from which you can access to
+# Openvidu API and the Administration Panel
+# WARNING! If you touch this configuration you can lose access to the platform from some IPs, 
+# use it carefully.
+
+# This section limits access to the /dashboard and /inspector page. 
+# The form for a single IP or RANGE is:
+# ALLOWED_ACCESS_TO_DASHBOARD=198.51.100.1 and ALLOWED_ACCESS_TO_DASHBOARD=198.51.100.1/24
+# To limit multiple IPs or RANGESs, separate by commas:
+# ALLOWED_ACCESS_TO_DASHBOARD=198.51.100.1, 198.51.100.1/24
+# ALLOWED_ACCESS_TO_DASHBOARD=
+
+# This section limits access to the Openvidu API.
+# The form for a single IP or RANGE is:
+# ALLOWED_ACCESS_TO_RESTAPI=198.51.100.1 and ALLOWED_ACCESS_TO_RESTAPI=198.51.100.1/24
+# To limit multiple IPs or RANGEs, separate by commas:
+# ALLOWED_ACCESS_TO_RESTAPI=198.51.100.1, 198.51.100.1/24
+# ALLOWED_ACCESS_TO_RESTAPI=
+
 # Whether to enable recording module or not
 OPENVIDU_RECORDING=false
 
