--- a/openvidu-server/docker/openvidu-proxy/default_nginx_conf/ce/default-app-without-demos.conf
+++ b/openvidu-server/docker/openvidu-proxy/default_nginx_conf/ce/default-app-without-demos.conf
@@ -46,6 +46,13 @@ server {
     #    proxy_pass http://yourapp; # Openvidu call by default
     #}
 
+    # Openvidu Admin Panel
+    location /dashboard {
+        {rules_access_dashboard}
+        deny all;
+        proxy_pass http://openviduserver;
+    }
+    
     # Openvidu Server
     location /layouts/custom {
         rewrite ^/layouts/custom/(.*)$ /custom-layout/$1 break;
@@ -57,6 +64,8 @@ server {
     }
 
     location /api {
+        {rules_acess_api}
+        deny all;
         proxy_pass http://openviduserver;
     }
 
@@ -65,10 +74,14 @@ server {
     }
 
     location /info {
+        {rules_access_dashboard}
+        deny all;
         proxy_pass http://openviduserver;
     }
 
     location /config {
+        {rules_acess_api}
+        deny all;
         proxy_pass http://openviduserver;
     }
 
@@ -77,10 +90,8 @@ server {
     }
 
     location /cdr {
-        proxy_pass http://openviduserver;
-    }
-
-    location /dashboard {
+        {rules_acess_api}
+        deny all;
         proxy_pass http://openviduserver;
     }
 }
