--- a/openvidu-server/docker/openvidu-proxy/default_nginx_conf/pro/default.conf
+++ b/openvidu-server/docker/openvidu-proxy/default_nginx_conf/pro/default.conf
@@ -82,8 +82,23 @@ server {
         proxy_pass http://yourapp; # Openvidu call by default
     }
 
-    # Kibana panel
+    # Openvidu Admin Panel
+    location /dashboard {
+        {rules_access_dashboard}
+        deny all;
+        rewrite ^/dashboard/(.*)$ /$1 break;
+        proxy_pass http://openviduserver/;
+    }
+
+    location /inspector {
+        {rules_access_dashboard}
+        deny all;
+        proxy_pass http://openviduserver;
+    }
+
     location /kibana {
+        {rules_access_dashboard}
+        deny all;
         auth_basic "Openvidu Monitoring";
         auth_basic_user_file /etc/nginx/kibana.htpasswd;
 
@@ -102,6 +117,8 @@ server {
     }
 
     location /api {
+        {rules_acess_api}
+        deny all;
         proxy_pass http://openviduserver;
     }
 
@@ -110,10 +127,14 @@ server {
     }
 
     location /info {
+        {rules_access_dashboard}
+        deny all;
         proxy_pass http://openviduserver;
     }
 
     location /config {
+        {rules_acess_api}
+        deny all;
         proxy_pass http://openviduserver;
     }
 
@@ -121,29 +142,28 @@ server {
         proxy_pass http://openviduserver;
     }
 
-    location /dashboard {
-        rewrite ^/dashboard/(.*)$ /$1 break;
-        proxy_pass http://openviduserver/;
-    }
-
-    # Openvidu Server Pro
     location /cdr {
+        {rules_acess_api}
+        deny all;
         proxy_pass http://openviduserver;
     }
 
+    # Openvidu Server Pro
     location /pro {
+        {rules_acess_api}
+        deny all;
         proxy_pass http://openviduserver;
     }
 
     location /api-login {
+        {rules_acess_api}
+        deny all;
         proxy_pass http://openviduserver;
     }
 
     location /elasticsearch {
-        proxy_pass http://openviduserver;
-    }
-
-    location /inspector {
+        {rules_acess_api}
+        deny all;
         proxy_pass http://openviduserver;
     }
 }
