--- a/openvidu-server/docker/openvidu-proxy/default_nginx_conf/pro/default-app-without-demos.conf
+++ b/openvidu-server/docker/openvidu-proxy/default_nginx_conf/pro/default-app-without-demos.conf
@@ -72,8 +72,23 @@ server {
     # Welcome
     root /var/www/html;
 
-    # Kibana panel
+    # Openvidu Admin Panel
+    location /dashboard {
+        {rules_access_dashboard}
+        deny all;
+        rewrite ^/dashboard/(.*)$ /$1 break;
+        proxy_pass http://openviduserver/;
+    }
+
+    location /inspector {
+        {rules_access_dashboard}
+        deny all;
+        proxy_pass http://openviduserver;
+    }
+
     location /kibana {
+        {rules_access_dashboard}
+        deny all;
         auth_basic "Openvidu Monitoring";
         auth_basic_user_file /etc/nginx/kibana.htpasswd;
 
@@ -92,6 +107,8 @@ server {
     }
 
     location /api {
+        {rules_acess_api}
+        deny all;
         proxy_pass http://openviduserver;
     }
 
@@ -100,10 +117,14 @@ server {
     }
 
     location /info {
+        {rules_access_dashboard}
+        deny all;
         proxy_pass http://openviduserver;
     }
 
     location /config {
+        {rules_acess_api}
+        deny all;
         proxy_pass http://openviduserver;
     }
 
@@ -111,29 +132,28 @@ server {
         proxy_pass http://openviduserver;
     }
 
-    location /dashboard {
-        rewrite ^/dashboard/(.*)$ /$1 break;
-        proxy_pass http://openviduserver/;
-    }
-
-    # Openvidu Server Pro
     location /cdr {
+        {rules_acess_api}
+        deny all;
         proxy_pass http://openviduserver;
     }
 
+    # Openvidu Server Pro
     location /pro {
+        {rules_acess_api}
+        deny all;
         proxy_pass http://openviduserver;
     }
 
     location /api-login {
+        {rules_acess_api}
+        deny all;
         proxy_pass http://openviduserver;
     }
 
     location /elasticsearch {
-        proxy_pass http://openviduserver;
-    }
-
-    location /inspector {
+        {rules_acess_api}
+        deny all;
         proxy_pass http://openviduserver;
     }
 }
