--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 server.address=0.0.0.0
 server.ssl.enabled=true
-server.port=4443
 server.ssl.key-store=classpath:openvidu-selfsigned.jks
 server.ssl.key-store-password=openvidu
 server.ssl.key-store-type=JKS
@@ -10,11 +9,11 @@ logging.level.root=info
 spring.main.allow-bean-definition-overriding=true
 
 DOTENV_PATH=.
-
+DOMAIN_OR_PUBLIC_IP=localhost
+HTTPS_PORT=443
 CERTIFICATE_TYPE=selfsigned
 KMS_URIS=["ws://localhost:8888/kurento"]
 
-OPENVIDU_PUBLICURL=local
 OPENVIDU_SECRET=MY_SECRET
 
 OPENVIDU_CDR=false
