--- a/openvidu-server/src/test/resources/integration-test.properties
+++ b/openvidu-server/src/test/resources/integration-test.properties
@@ -1,6 +1,5 @@
 server.address=0.0.0.0
 server.ssl.enabled=true
-server.port=4443
 server.ssl.key-store=classpath:openvidu-selfsigned.jks
 server.ssl.key-store-password=openvidu
 server.ssl.key-store-type=JKS
@@ -11,7 +10,9 @@ spring.main.allow-bean-definition-overriding=true
 
 KMS_URIS=["ws://localhost:8888/kurento"]
 
-OPENVIDU_PUBLICURL=local
+DOMAIN_OR_PUBLIC_IP=localhost
+HTTPS_PORT=4443
+
 OPENVIDU_SECRET=MY_SECRET
 
 OPENVIDU_CDR=false
