--- a/openvidu-server/src/test/resources/application.properties
+++ b/openvidu-server/src/test/resources/application.properties
@@ -1,8 +1,8 @@
-server.port: 4443
 server.address: 0.0.0.0
 server.ssl.enabled: false
 
-KMS_URIS=[\"ws://localhost:8888/kurento\"]
+DOMAIN_OR_PUBLIC_IP=localhost
+HTTPS_PORT=4443
+OPENVIDU_SECRET=MY_SECRET
 
-OPENVIDU_SECRET: MY_SECRET
-OPENVIDU_PUBLICURL: local
+KMS_URIS=[\"ws://localhost:8888/kurento\"]
