openvidu-server: application.properties comply with deafult config values

--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -9,12 +9,12 @@ logging.level.root=info
 spring.main.allow-bean-definition-overriding=true
 
 DOTENV_PATH=.
-DOMAIN_OR_PUBLIC_IP=localhost
-HTTPS_PORT=443
-CERTIFICATE_TYPE=selfsigned
-KMS_URIS=["ws://localhost:8888/kurento"]
 
-OPENVIDU_SECRET=MY_SECRET
+DOMAIN_OR_PUBLIC_IP=
+OPENVIDU_SECRET=
+CERTIFICATE_TYPE=selfsigned
+HTTPS_PORT=443
+KMS_URIS=["ws://localhost:8888/kurento"]
 
 OPENVIDU_CDR=false
 OPENVIDU_CDR_PATH=/opt/openvidu/cdr
