OPENVIDU_DOMAIN_OR_PUBLIC_IP to DOMAIN_OR_PUBLIC_IP

--- a/openvidu-server/docker/openvidu-docker-compose/.env
+++ b/openvidu-server/docker/openvidu-docker-compose/.env
@@ -7,7 +7,7 @@
 
 # Domain name. If you do not have one, the public IP of the machine.
 # For example: 198.51.100.1, or openvidu.example.com
-OPENVIDU_DOMAIN_OR_PUBLIC_IP=
+DOMAIN_OR_PUBLIC_IP=
 
 # OpenVidu SECRET used for apps to connect to OpenVidu server and users to access to OpenVidu Dashboard
 OPENVIDU_SECRET=
