--- a/openvidu-server/docker/openvidu-docker-compose/.env
+++ b/openvidu-server/docker/openvidu-docker-compose/.env
@@ -29,8 +29,8 @@ LETSENCRYPT_EMAIL=user@example.com
 # Proxy configuration
 # If you want to change the ports on which openvidu listens, uncomment the following lines
 
-# Allows any request to http://IP:OPENVIDU_HTTP_PORT/ to be automatically 
-# redirected to https://IP:OPENVIDU_HTTPS_PORT/. 
+# Allows any request to http://DOMAIN_OR_PUBLIC_IP:HTTP_PORT/ to be automatically 
+# redirected to https://DOMAIN_OR_PUBLIC_IP:HTTPS_PORT/. 
 # WARNING: the default port 80 cannot be changed during the first boot 
 # if you have chosen to deploy with the option CERTIFICATE_TYPE=letsencrypt
 # HTTP_PORT=80
