--- a/openvidu-server/docker/openvidu-docker-compose/docker-compose.override.yml
+++ b/openvidu-server/docker/openvidu-docker-compose/docker-compose.override.yml
@@ -1,9 +1,17 @@
 version: '3.1'
 
 services:
+    # --------------------------------------------------------------
+    #
     # Change this if your want use your own application.
     # It's very important expose your application in port 5442
     # and use the http protocol.
+    # 
+    # Default Application
+    #
+    # Openvidu-Call Version: 2.12.0
+    #
+    # --------------------------------------------------------------
     app:
         image: openvidu/openvidu-call:2.12.0
         restart: on-failure
