--- a/openvidu-server/docker/openvidu-server-pro/Dockerfile
+++ b/openvidu-server/docker/openvidu-server-pro/Dockerfile
@@ -18,7 +18,7 @@ RUN mkdir -p /opt/openvidu /usr/local/bin/
 COPY openvidu-server.jar /opt/openvidu/openvidu-server.jar 
 
 COPY ./entrypoint.sh /usr/local/bin
-COPY ./discover_my_public_ip.sh /usr/local/bin
+COPY ../utils/discover_my_public_ip.sh /usr/local/bin
     
 RUN mkdir -p /opt/openvidu/recordings && \
     chmod +x /usr/local/bin/entrypoint.sh && \
