--- a/openvidu-server/docker/openvidu-coturn/Dockerfile
+++ b/openvidu-server/docker/openvidu-coturn/Dockerfile
@@ -5,7 +5,7 @@ RUN apt-get update \
 
 COPY ./configuration-files.sh /tmp/
 COPY ./entrypoint.sh /usr/local/bin
-COPY ../utils/discover_my_public_ip.sh /usr/local/bin
+COPY ./discover_my_public_ip.sh /usr/local/bin
 
 RUN chmod +x /tmp/configuration-files.sh \
     && chmod +x /usr/local/bin/entrypoint.sh \
