--- a/openvidu-server/docker/openvidu-docker-compose/docker-compose.override.yml
+++ b/openvidu-server/docker/openvidu-docker-compose/docker-compose.override.yml
@@ -9,14 +9,14 @@ services:
     # 
     # Default Application
     #
-    # Openvidu-Call Version: 2.12.0
+    # Openvidu-Call Version: 2.14.0
     #
     # --------------------------------------------------------------
     app:
-        image: openvidu/openvidu-call:2.12.0
+        image: openvidu/openvidu-call:2.14.0-beta10
         restart: on-failure
         ports:
-            - "5442:80"
+            - "5442:5000"
         environment: 
             - OPENVIDU_URL=https://${DOMAIN_OR_PUBLIC_IP}:${HTTPS_PORT:-443}
             - OPENVIDU_SECRET=${OPENVIDU_SECRET}
