Proxy updated for auto renew letscrypt certificated

--- a/openvidu-server/docker/openvidu-proxy/default_nginx_conf/pro/default-app-without-demos.conf
+++ b/openvidu-server/docker/openvidu-proxy/default_nginx_conf/pro/default-app-without-demos.conf
@@ -156,4 +156,10 @@ server {
         deny all;
         proxy_pass http://openviduserver;
     }
+
+    # letsencrypt
+    location /.well-known/acme-challenge {
+        root /var/www/certbot;
+        try_files $uri $uri/ =404;
+    }
 }
