openvidu-server, openvidu-node-client, openvidu-java-client: Add COMPOSED_QUICK_START outputMode

--- a/openvidu-server/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/openvidu-server/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -47,6 +47,12 @@
 			"defaultValue": false
 		},
 		{
+			"name": "OPENVIDU_RECORDING_DEBUG",
+			"type": "java.lang.Boolean",
+			"description": "If true, start recording service in debug mode",
+			"defaultValue": false
+		},
+		{
 			"name": "OPENVIDU_RECORDING_PATH",
 			"type": "java.lang.String",
 			"description": "Where to store the recorded video files",
