Added debug mode to .env docker-compose deployment

--- a/openvidu-server/docker/openvidu-docker-compose/.env
+++ b/openvidu-server/docker/openvidu-docker-compose/.env
@@ -62,6 +62,9 @@ LETSENCRYPT_EMAIL=user@example.com
 # Whether to enable recording module or not
 OPENVIDU_RECORDING=false
 
+# Use recording module with debug mode.
+OPENVIDU_RECORDING_DEBUG=false
+
 # Openvidu Folder Record used for save the openvidu recording videos. Change it
 # with the folder you want to use from your host.
 OPENVIDU_RECORDING_PATH=/opt/openvidu/recordings
