Retagged openvidu/openvidu-proxy from 3.0.0-beta1 to 3.0.0

--- a/openvidu-server/docker/openvidu-docker-compose/docker-compose.yml
+++ b/openvidu-server/docker/openvidu-docker-compose/docker-compose.yml
@@ -74,7 +74,7 @@ services:
             - MAX_PORT=65535
 
     nginx:
-        image: openvidu/openvidu-proxy:3.0.0-beta1
+        image: openvidu/openvidu-proxy:3.0.0
         restart: on-failure
         network_mode: host
         volumes:
