--- a/openvidu-test-e2e/docker/xenial/Dockerfile
+++ b/openvidu-test-e2e/docker/xenial/Dockerfile
@@ -39,9 +39,12 @@ RUN add-apt-repository ppa:jonathonf/ffmpeg-4
 RUN apt-get update
 RUN apt-get install -y ffmpeg
 
+# docker
+RUN apt-get update && apt-get -y install docker.io
+
 # Cleanup
 RUN rm -rf /var/lib/apt/lists/*
-RUN apt-get autoremove --purge -y
+RUN apt-get autoremove --purge -y && apt-get autoclean
 
 COPY entrypoint.sh /entrypoint.sh
 RUN ["chmod", "+x", "/entrypoint.sh"]
