--- a/openvidu-java-client/pom.xml
+++ b/openvidu-java-client/pom.xml
@@ -171,6 +171,7 @@
 							<serverId>ossrh</serverId>
 							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
 							<autoReleaseAfterClose>true</autoReleaseAfterClose>
+							<stagingProgressTimeoutMinutes>30</stagingProgressTimeoutMinutes>
 						</configuration>
 					</plugin>
 				</plugins>
