--- a/openvidu-server/docker/openvidu-recording/firefox/configuration/customconfig.cfg
+++ b/openvidu-server/docker/openvidu-recording/firefox/configuration/customconfig.cfg
@@ -6,3 +6,5 @@ lockPref("extensions.enabledScopes", 15);
 lockPref("security.ssl.enable_ocsp_stapling", false);
 lockPref("network.stricttransportsecurity.preloadlist", false);
 lockPref("network.http.phishy-userpass-length", 300);
+lockPref("security.enterprise_roots.enabled", true);
+lockPref("network.websocket.allowInsecureFromHTTPS", true);
