--- a/openvidu-server/deployments/ce/docker-compose/.env
+++ b/openvidu-server/deployments/ce/docker-compose/.env
@@ -122,7 +122,7 @@ OPENVIDU_WEBHOOK=false
 #OPENVIDU_WEBHOOK_HEADERS=
 
 # List of events that will be sent by OpenVidu Webhook service
-# Leave blank if all events.
+# Default value is all available events
 OPENVIDU_WEBHOOK_EVENTS=[sessionCreated,sessionDestroyed,participantJoined,participantLeft,webrtcConnectionCreated,webrtcConnectionDestroyed,recordingStatusChanged,filterEventDispatched,mediaNodeStatusChanged]
 
 # How often the garbage collector of non active sessions runs.
