Fixed forceVideoCodec and allowTranscoding properties. Add debug logs for SDP

--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
@@ -178,6 +178,13 @@ OPENVIDU_STREAMS_VIDEO_MAX_SEND_BANDWIDTH=1000
 # 0 means unconstrained
 OPENVIDU_STREAMS_VIDEO_MIN_SEND_BANDWIDTH=300
 
+# All sessions of OpenVidu will try to force this codec. If OPENVIDU_ALLOW_TRANSCODING=true
+# when a codec can not be forced, transcoding will be allowed 
+# OPENVIDU_FORCED_CODEC=VP8
+
+# Allow transcoding if codec specified in OPENVIDU_FORCED_CODEC can not be applied 
+# OPENVIDU_ALLOW_TRANSCODING=false
+
 # true to enable OpenVidu Webhook service. false' otherwise
 # Values: true | false
 OPENVIDU_WEBHOOK=false
